--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/peeky.css">
 	
-    <link rel="shortcut icon" href="../img/jiveIcon.png">
+    <link rel="shortcut icon" href="img/jiveIcon.png">
  
  <style>
  a {
