Added App Store download link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			                                </h1>
 
 											<div class="button-group">
-			                                    <a class="large primary button" href="#SIKEitsNotEvenOutYet">Download now</a>
+			                                    <a class="large primary button" href="https://itunes.apple.com/us/app/jive-for-ios/id911948088?ls=1&mt=8">Download now</a>
 			                                 </div>
 
 			                            </div>
@@ -174,7 +174,7 @@
 			                            </div>
 			                            
 			                            <div class="small margin">
-			                                <a class="large primary button" href="#SIKEitsNotEvenOutYet">Download Now</a>
+			                                <a class="large primary button" href="https://itunes.apple.com/us/app/jive-for-ios/id911948088?ls=1&mt=8">Download Now</a>
 			                            </div>
 
 			                        </div>
