added meta seo tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+	<meta name="apple-itunes-app" content="app-id=911948088"/>
+	<meta name="Description" content="The Ultiamate Music Experience">
     <title>Jive</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/peeky.css">
